lab 1/K8s/deploy-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client
  name: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:      
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: dmirina/client:1.2
        ports:
          - containerPort: 3000
