lab 1/K8s/s-client.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
  name: client
  namespace: default
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: client
  type: ClusterIP
