lab 1/K8s/s-movies.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: movies
  name: movies
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: movies
  type: ClusterIP
