lab 1/K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:    
    nginx.ingress.kubernetes.io/use-regex: "true"  
    # Using a different port (not 80)
    port: 5000
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client
            port:
              number: 3000
      - path: /good-movies
        pathType: Prefix
        backend:
          service:
            name: movies
            port:
              number: 8080
